fix widget-search overflowin

--- a/css/components/_search.scss
+++ b/css/components/_search.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 .main-search,
-.aside-search {
+.widget-search {
     position: relative;
     overflow: hidden;
 }
